12.10.0 (12-09-2025)
- Bug Fix: Fix the recalculation of registration tuition installments [#qubIT-Fenix-7442]
- Refactor: Partition the RegistrationTuitionService into smaller classes [#qubIT-Fenix-7442]
- Refactor: Unit tests to cover most as possible, the variations with the recalculation of registration tuition installments [#qubIT-Fenix-7442]

12.9.9 (08-09-2025)
- Bug Fix: Resolve some interest debts associated with standalone, extracurricular and improvement tuition present degree information [#qubIT-Fenix-7443]

12.9.8 (26-08-2025)
- Refactor: Transform static method into instance method to copy academic debt rule between periods [#qubIT-Fenix-7423]
- Bug Fix: Copy the start and end dates of academic debt rule execution [#qubIT-Fenix-7423]

12.9.7 (26-08-2025)
- Refactor: Implement treasury service method to check if dynamic message is defined [#qubIT-Fenix-7405]
- Bug Fix: Correct order between academic debt rules between the same type, financial entity and execution year [#qubIT-Fenix-5440]

12.9.6 (04-08-2025)
- Refactor: Implement method to retrieve personal email from person customer [#qubIT-Fenix-7385]

12.9.5 (01-08-2025)
- Improvement: Allow correction of fiscal numbers of customers, which countries are other than of finantial institution [#qubIT-Fenix-7300]

12.9.4 (22-07-2025)
- Refactor: Declare execution year and degree in beans used for treasury reporting [#qubIT-Fenix-7272]

12.9.3 (16-07-2025)
- Bug Fix: Use the default tuition debit entry description format in creating debts manually [#qubIT-Fenix-7244]

12.9.2 (26-06-2025)
- Bug Fix: Added the missing registration filter in finding custom academic treasury events [#qubIT-Fenix-7151]

12.9.1 (03-06-2025)
- Bug Fix: Dissociate the degree when deleting an academic tariff [#qubIT-Fenix-6753]

12.9.0 (30-05-2025)
- Improvement: Associate academic tariffs with units and more than one degree [#qubIT-Fenix-6753]
- Improvement: Create registration tuition debt by academic tariff [#qubIT-Fenix-6753]
