@@ -1,3 +1,5 @@
+- Refactor: Method to reorder tuition payment plan installments, based by product installment order property [#qubIT-Fenix-7626]
+
 12.10.0 (12-09-2025)
 - Bug Fix: Fix the recalculation of registration tuition installments [#qubIT-Fenix-7442]
 - Refactor: Partition the RegistrationTuitionService into smaller classes [#qubIT-Fenix-7442]
